--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+node_modules/
 
 # Local History for Visual Studio Code
 .history/
