--- a/package.json
+++ b/package.json
@@ -42,7 +42,11 @@
   },
   "devDependencies": {
     "rollup": "^2.58.0",
-    "three": "^0.125.0"
+    "rollup-plugin-dts": "^5.3.0",
+    "three": "^0.125.0",
+    "typescript": "^5.1.6"
   },
-  "private": false
+  "private": false,
+  "dependencies": {},
+  "types": "build/index.module.d.ts"
 }
